welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:29: error: not found: value ligne1
  for (i <- 1 to 9) {ligne1();haut1();}
                     ^