welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
def faireV() { point()
               avance(); gauche(); avance();
               point(); recule(); droite(); avance; point()
  
}


def point()       {baisseBrosse(); leveBrosse()}


def run1() { for (i <- 1 to 4) {
  avance();avance();faireV();avance();avance();gauche()}
  
}


def droite1() {for (i <-1 to 7) {avance()}}
def gauche1() {gauche(); gauche();for (i <-1 to 7) {avance()};droite()}
def haut1() {gauche(); for (i <-1 to 7) {avance()}; droite()}
def bas1() {droite(); for (i <-1 to 7) {avance()}; gauche()}

def ligne() {for (i <- 1 to 9) {
  run1();droite1()
}}


override def run() {
  
  for (i <- 1 to 9) {ligne1();haut1();}
}

